<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_addrequests"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/add_requests"


        />

    <item
        android:id="@+id/navigation_browserequests"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/browse_requests"

        />

    <item
        android:id="@+id/navigation_currentrequests"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/current_requests"

        />

    <item
        android:id="@+id/navigation_currentdeliveries"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/current_deliveries" />

    <item
        android:id="@+id/navigation_userprofile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/user_profile" />


</menu>