<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/enter_username"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="90dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ben_name" />

        <EditText
            android:id="@+id/enter_telehandle"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="637dp"
            android:minHeight="48dp"
            android:hint="@string/benny_tele"
            tools:ignore="TouchTargetSizeCheck">

        </EditText>


    </LinearLayout>

    <Button
        android:id="@+id/submitlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="90dp"
        android:text="@string/submit_login"
        tools:ignore="InvalidId">

    </Button>




</RelativeLayout>